fix home page overflow

--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -41,6 +41,7 @@
 
 .home-middle {
     background: linear-gradient(to bottom, #0B0F12, #30343D);
+    padding: 70px 0;
 }
 
 .home-middle::before {
@@ -56,8 +57,8 @@
 }
 
 .key-features-h {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin: 0;
+    margin-bottom: 70px;
     text-align: center;
     color: white;
     font-size: 3em;
@@ -117,7 +118,14 @@
     text-align: center;
 }
 
+.home-red-desc-container {
+    flex: 1;
+    flex-direction: column;
+}
+
 .home-red-desc {
     color: white;
     text-align: center;
+    
+    margin: 0;
 }
